# camlq

./: README.md  camlq.opam  debug_test.ml  dune-project  sample.json  test_simple.ml
.github/workflows/: ci.yml
lib/: ast.ml  dune  lexer.ml  lexer.mli  parser.ml  parser.ml.backup  parser.mli  query_ast.ml  query_ast.mli  query_eval.ml  query_eval.mli  query_parser.ml  query_parser.mli
test/: dune  test_camlq.ml
